--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,8 @@
     "object-curly-newline": 0,
     "array-callback-return": "off",
     "no-param-reassign": "off",
-    "no-alert": "off"
+    "no-alert": "off",
+    "no-plusplus": "off",
+    "no-restricted-globals": "off"
   }
 }
